# OpenGTO

./: .ccls  CMakeLists.txt  README.md
.ccls-cache/@@home@luca@quant@OpenGTO/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@12@backward@binders.h.blob  @usr@include@c++@12@bits@alloc_traits.h.blob  @usr@include@c++@12@bits@allocator.h.blob  @usr@include@c++@12@bits@basic_ios.h.blob  @usr@include@c++@12@bits@basic_ios.tcc.blob  @usr@include@c++@12@bits@basic_string.h.blob  @usr@include@c++@12@bits@basic_string.tcc.blob  @usr@include@c++@12@bits@char_traits.h.blob  @usr@include@c++@12@bits@charconv.h.blob  @usr@include@c++@12@bits@concept_check.h.blob  @usr@include@c++@12@bits@cpp_type_traits.h.blob  @usr@include@c++@12@bits@cxxabi_forced.h.blob  @usr@include@c++@12@bits@cxxabi_init_exception.h.blob  @usr@include@c++@12@bits@exception.h.blob  @usr@include@c++@12@bits@exception_defines.h.blob  @usr@include@c++@12@bits@exception_ptr.h.blob  @usr@include@c++@12@bits@functexcept.h.blob  @usr@include@c++@12@bits@functional_hash.h.blob  @usr@include@c++@12@bits@hash_bytes.h.blob  @usr@include@c++@12@bits@invoke.h.blob  @usr@include@c++@12@bits@ios_base.h.blob  @usr@include@c++@12@bits@istream.tcc.blob  @usr@include@c++@12@bits@locale_classes.h.blob  @usr@include@c++@12@bits@locale_classes.tcc.blob  @usr@include@c++@12@bits@locale_facets.h.blob  @usr@include@c++@12@bits@locale_facets.tcc.blob  @usr@include@c++@12@bits@localefwd.h.blob  (+160 more)
include/: card.h
src/: main.cpp
tests/: testHand.cpp
(+12 files in other folders)
